Meet Team Alignment Bug #1897

--- a/public/css/style.default_part_2.css
+++ b/public/css/style.default_part_2.css
@@ -10047,6 +10047,7 @@ contenthover a {
 
 .meet-team-v1 .profilepic {
   margin-bottom: 20px;
+  min-height: 445px;
 }
 
 .meet-team-v1 .profilepic-hover {
